# simplesailing

./: .gitignore  Cargo.toml  README.md  justfile  noisesearch  note  notes.md
.vim/: coc-settings.json
client/: Cargo.toml
client/src/: main.rs
front/: index.html  index.js
icons/: icon.icns
pirates/: Cargo.toml
pirates/src/: lib.rs  noise.rs  sampler.rs
