[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = "A game about wind"

[features]
default = ["gamepad"]
gamepad = ["gilrs"]

[dependencies]
gilrs = { version = "0.10.2", optional = true }
minifb = "0.25.0"
pirates = { path = "../pirates", default_features = false }

[package.metadata.bundle]
name = "Simple Sailing Simulator"
identifier = "com.github.speedy6451.simplesailing"
icon = ["../icons/*"]
long_description = """
Simple Sailing Simulator: Brave the north wind and search for York, or simply explore.

Controls:
+/-: zoom
Arrow Keys: Pan Camera
A: rudder left
D: rudder right

Your sailboat travels fastest going perpendicular to the wind.
"""
