[package]
name = "pirates"
version = "0.1.0"
edition = "2021"

[features]
default = ["wasm"]
wasm = ["wee_alloc"]

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
libm = "0.2.7"
spin = "0.9.8"

[dependencies.rayon]
version = "1.7.0"
optional = true

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[dependencies.nalgebra]
version = "0.32.3"
default-features = false
features = ["libm"]
