[package]
name = "pirates"
version = "1.0.0"
edition = "2021"

[features]
default = ["wasm"]
wasm = ["wee_alloc"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
libm = "0.2.7"
num-derive = "0.4.0"
num-traits = "0.2.16"
spin = "0.9.8"

[dependencies.rayon]
version = "1.7.0"
optional = true

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[dependencies.nalgebra]
version = "0.32.3"
default-features = false
features = ["libm"]
